--- a/roles/openscap/tasks/main.yml
+++ b/roles/openscap/tasks/main.yml
@@ -6,38 +6,46 @@
     update_cache: yes
   with_items:
     - cmake
-    - libdbus-1-dev
-    - libdbus-1-dev
-    - libdbus-glib-1-dev
-    - libcurl4-openssl-dev
-    - libgcrypt20-dev
-    - libselinux1-dev
-    - libxslt1-dev
-    - libgconf2-dev
-    - libacl1-dev
-    - libblkid-dev
-    - libcap-dev
-    - libxml2-dev
-    - libldap2-dev
-    - libpcre3-dev
-    - python3-dev
-    - swig
-    - libxml-parser-perl
-    - libxml-xpath-perl
-    - libperl-dev
-    - libbz2-dev
-    - librpm-dev
-    - g++
-    - libapt-pkg-dev
-    - libyaml-dev
-    - libxmlsec1-dev
-    - libxmlsec1-openssl
-    - git
+#     - libdbus-1-dev
+#     - libdbus-1-dev
+#     - libdbus-glib-1-dev
+#     - libcurl4-openssl-dev
+#     - libgcrypt20-dev
+#     - libselinux1-dev
+#     - libxslt1-dev
+#     - libgconf2-dev
+#     - libacl1-dev
+#     - libblkid-dev
+#     - libcap-dev
+#     - libxml2-dev
+#     - libldap2-dev
+#     - libpcre3-dev
+#     - python3-dev
+#     - swig
+#     - libxml-parser-perl
+#     - libxml-xpath-perl
+#     - libperl-dev
+#     - libbz2-dev
+#     - librpm-dev
+#     - g++
+#     - libapt-pkg-dev
+#     - libyaml-dev
+#     - libxmlsec1-dev
+#     - libxmlsec1-openssl
+#     - git
+
 # - name: Download OpenSCAP sources
-#   git:
-#     repo: https://github.com/OpenSCAP/openscap.git
+#   get_url:
+#     url: "{{ openscap_url }}"
+#     dest: "{{ openscap_install_dir }}.tar.gz"
+#     mode: 0644
+
+# - name: Extract OpenSCAP sources
+#   unarchive:
+#     src: "{{ openscap_install_dir }}.tar.gz"
 #     dest: "{{ openscap_install_dir }}"
-#   register: openscap_source
+#     remote_src: yes
+#     creates: "{{ openscap_install_dir }}"
 
 # - name: Build OpenSCAP
 #   become: true
