--- a/roles/openscap/tasks/main.yml
+++ b/roles/openscap/tasks/main.yml
@@ -6,34 +6,32 @@
     update_cache: yes
   with_items:
     - cmake
-#     - libdbus-1-dev
-#     - libdbus-1-dev
-#     - libdbus-glib-1-dev
-#     - libcurl4-openssl-dev
-#     - libgcrypt20-dev
-#     - libselinux1-dev
-#     - libxslt1-dev
-#     - libgconf2-dev
-#     - libacl1-dev
-#     - libblkid-dev
-#     - libcap-dev
-#     - libxml2-dev
-#     - libldap2-dev
-#     - libpcre3-dev
-#     - python3-dev
-#     - swig
-#     - libxml-parser-perl
-#     - libxml-xpath-perl
-#     - libperl-dev
-#     - libbz2-dev
-#     - librpm-dev
-#     - g++
-#     - libapt-pkg-dev
-#     - libyaml-dev
-#     - libxmlsec1-dev
-#     - libxmlsec1-openssl
-#     - git
-
+    - libdbus-1-dev
+    - libdbus-glib-1-dev
+    - libcurl4-openssl-dev
+    - libgcrypt20-dev
+    - libselinux1-dev
+    - libxslt1-dev
+    - libgconf2-dev
+    - libacl1-dev
+    - libblkid-dev
+    - libcap-dev
+    - libxml2-dev
+    - libldap2-dev
+    - libpcre3-dev
+    - python3-dev
+    - swig
+    - libxml-parser-perl
+    - libxml-xpath-perl
+    - libperl-dev
+    - libbz2-dev
+    - librpm-dev
+    - g++
+    - libapt-pkg-dev
+    - libyaml-dev
+    - libxmlsec1-dev
+    - libxmlsec1-openssl
+    - git
 # - name: Download OpenSCAP sources
 #   get_url:
 #     url: "{{ openscap_url }}"
