--- a/roles/openscap/tasks/main.yml
+++ b/roles/openscap/tasks/main.yml
@@ -32,12 +32,12 @@
     - libxmlsec1-dev
     - libxmlsec1-openssl
     - git
-# - name: Download OpenSCAP sources
-#   get_url:
-#     url: "{{ openscap_url }}"
-#     dest: "{{ openscap_install_dir }}.tar.gz"
-#     mode: 0644
 
+- name: Download OpenSCAP sources
+  get_url:
+    url: "{{ openscap_url }}"
+    dest: "{{ openscap_install_dir }}.tar.gz"
+    mode: 0644
 # - name: Extract OpenSCAP sources
 #   unarchive:
 #     src: "{{ openscap_install_dir }}.tar.gz"
