--- a/roles/openscap/tasks/main.yml
+++ b/roles/openscap/tasks/main.yml
@@ -56,5 +56,5 @@
   args:
     chdir: "{{ openscap_install_dir }}/build"
 
-- name: Remote scan
-  shell: oscap-ssh --sudo vagrant@10.0.0.11 22 xccdf eval --datastream-id scap_org.open-scap_datastream_from_xccdf_ssg-debian11-xccdf.xml --xccdf-id scap_org.open-scap_cref_ssg-debian11-xccdf.xml --profile xccdf_org.ssgproject.content_profile_anssi_np_nt28_average --oval-results --results /tmp/xccdf-results.xml --results-arf /tmp/arf.xml --report /tmp/report.html /usr/local/share/xml/scap/ssg/content/ssg-debian11-ds.xml
+# - name: Remote scan
+#   shell: oscap-ssh --sudo vagrant@10.0.0.11 22 xccdf eval --datastream-id scap_org.open-scap_datastream_from_xccdf_ssg-debian11-xccdf.xml --xccdf-id scap_org.open-scap_cref_ssg-debian11-xccdf.xml --profile xccdf_org.ssgproject.content_profile_anssi_np_nt28_average --oval-results --results /tmp/xccdf-results.xml --results-arf /tmp/arf.xml --report /tmp/report.html /usr/local/share/xml/scap/ssg/content/ssg-debian11-ds.xml
