--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,9 @@ run-playbook:
     - oscap-ssh --sudo vagrant@10.0.0.11 22 xccdf eval --datastream-id scap_org.open-scap_datastream_from_xccdf_ssg-debian11-xccdf.xml --xccdf-id scap_org.open-scap_cref_ssg-debian11-xccdf.xml --profile xccdf_org.ssgproject.content_profile_anssi_np_nt28_average --oval-results --results /tmp/xccdf-results.xml --results-arf /tmp/arf.xml --report /tmp/report.html /usr/local/share/xml/scap/ssg/content/ssg-debian11-ds.xml
     - echo $?
   allow_failure:
-    exit_codes: 2
+    exit_codes: 
+      - 2
+      - 1
   artifacts:
     paths:
       - /tmp/xccdf-results.xml
