--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,14 +11,12 @@ run-openscap-scan:
       for TARGET in $TARGETS
         do
           ssh vagrant@$TARGET -C "oscap -h"|| ansible-playbook main.yml
-          oscap-ssh --sudo vagrant@$TARGET 22 xccdf eval --datastream-id scap_org.open-scap_datastream_from_xccdf_ssg-debian11-xccdf.xml --xccdf-id scap_org.open-scap_cref_ssg-debian11-xccdf.xml --profile xccdf_org.ssgproject.content_profile_anssi_np_nt28_average --oval-results --results /tmp/xccdf-results.xml --results-arf /tmp/arf.xml --report /tmp/report.html /usr/local/share/xml/scap/ssg/content/ssg-debian11-ds.xml || (e=$? && echo $e && if [[ $e -ne 0 && $e -ne 2 ]]; then exit $e; fi )
+          oscap-ssh --sudo vagrant@$TARGET 22 xccdf eval --datastream-id scap_org.open-scap_datastream_from_xccdf_ssg-debian11-xccdf.xml --xccdf-id scap_org.open-scap_cref_ssg-debian11-xccdf.xml --profile xccdf_org.ssgproject.content_profile_anssi_np_nt28_average --oval-results --results /tmp/xccdf-results.xml --results-arf /tmp/arf.xml --report /tmp/report.html /usr/local/share/xml/scap/ssg/content/ssg-debian11-ds.xml || (e=$? && if [[ $e -ne 0 && $e -ne 2 ]]; then exit $e; fi )
         done
-  allow_failure:
-    exit_codes: 2
-  # artifacts:
-  #   paths:
-  #     - /tmp/xccdf-results.xml
-  #     - /tmp/arf.xml
-  #     - /tmp/report.html
+  artifacts:
+    paths:
+      - /tmp/xccdf-results.xml
+      - /tmp/arf.xml
+      - /tmp/report.html
   after_script:
     # - rm ~/.ssh/id_rsa
