--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ run-openscap-scan:
         do
           mkdir -p reports/$TARGET
           ssh -o StrictHostKeyChecking=no vagrant@$TARGET -C "oscap -h"|| ansible-playbook main.yml
-          oscap-ssh --sudo vagrant@$TARGET 22 xccdf eval --datastream-id scap_org.open-scap_datastream_from_xccdf_ssg-debian11-xccdf.xml --xccdf-id scap_org.open-scap_cref_ssg-debian11-xccdf.xml --profile xccdf_org.ssgproject.content_profile_anssi_np_nt28_average --oval-results --results reports/$TARGET/xccdf-results.xml --results-arf reports/$TARGET/arf.xml --report reports/$TARGET/report.html /usr/local/share/xml/scap/ssg/content/ssg-debian11-ds.xml || (e=$? && if [[ $e -ne 0 && $e -ne 2 ]]; then exit $e; fi )
+          oscap-ssh --sudo vagrant@$TARGET 22 xccdf eval --datastream-id scap_org.open-scap_datastream_from_xccdf_ssg-debian11-xccdf.xml --xccdf-id scap_org.open-scap_cref_ssg-debian11-xccdf.xml --profile xccdf_org.ssgproject.content_profile_anssi_np_nt28_average --oval-results --results reports/$TARGET/xccdf-results.xml --results-arf reports/$TARGET/arf.xml --report reports/$TARGET/report.html /usr/local/share/xml/scap/ssg/content/ssg-debian11-ds.xml || (e=$? && if [[ $e -ne 2 ]]; then exit $e; fi )
         done
   artifacts:
     paths:
