--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ run-openscap-scan:
     - rm -f ~/.ssh/known_hosts
   script:
     # - ansible-playbook main.yml
-    - scan.sh
+    - "- chmod +x ./script.sh; ./script.sh"
   artifacts:
     paths:
       - reports
