--- a/roles/openscap/tasks/debian-scan.yml
+++ b/roles/openscap/tasks/debian-scan.yml
@@ -4,9 +4,9 @@
     dest: "/tmp/"
     mode: 0644
   with_fileglob:
-    - "roles/openscap/files/ssg-debian*"
+    - "/usr/local/share/xml/scap/ssg/content/ssg-debian*"
   register: ssg_content
-# - name: Run OpenSCAP scan
-#   become: true
-#   shell: "oscap xccdf eval --datastream-id scap_org.open-scap_datastream_from_xccdf_ssg-debian11-xccdf.xml --xccdf-id scap_org.open-scap_cref_ssg-debian11-xccdf.xml --profile xccdf_org.ssgproject.content_profile_anssi_np_nt28_average --oval-results --results /tmp/xccdf-results.xml --results-arf /tmp/arf.xml --report /tmp/report.html /tmp/ssg-debian11-ds.xml"
-#   when: ssg_content.stat.exists
+- name: Run OpenSCAP scan
+  become: true
+  shell: "oscap xccdf eval --datastream-id scap_org.open-scap_datastream_from_xccdf_ssg-debian11-xccdf.xml --xccdf-id scap_org.open-scap_cref_ssg-debian11-xccdf.xml --profile xccdf_org.ssgproject.content_profile_anssi_np_nt28_average --oval-results --results /tmp/xccdf-results.xml --results-arf /tmp/arf.xml --report /tmp/report.html /tmp/ssg-debian11-ds.xml"
+  when: ssg_content.stat.exists
