--- a/roles/openscap/tasks/debian-scan.yml
+++ b/roles/openscap/tasks/debian-scan.yml
@@ -9,3 +9,5 @@
 - name: Run OpenSCAP scan
   become: true
   shell: "oscap xccdf eval --datastream-id scap_org.open-scap_datastream_from_xccdf_ssg-debian11-xccdf.xml --xccdf-id scap_org.open-scap_cref_ssg-debian11-xccdf.xml --profile xccdf_org.ssgproject.content_profile_anssi_np_nt28_average --oval-results --results /tmp/xccdf-results.xml --results-arf /tmp/arf.xml --report /tmp/report.html /tmp/ssg-debian11-ds.xml"
+  register: result
+  failed_when: ( result.rc not in [ 0, 2 ] )
