add hostname folder

--- a/roles/openscap/tasks/debian-scan.yml
+++ b/roles/openscap/tasks/debian-scan.yml
@@ -14,7 +14,7 @@
 - name: Download report files
   fetch:
     src: "{{ item }}"
-    dest: "reports/"
+    dest: "reports/{{ inventory_hostname }}/"
     flat: yes
   with_items:
     - "/tmp/xccdf-results.xml"
