--- a/roles/openscap/tasks/ubuntu-scan.yml
+++ b/roles/openscap/tasks/ubuntu-scan.yml
@@ -1,15 +1,19 @@
 - name: Copy SCAP content for ubuntu
   copy:
     src: "{{ item }}"
-    dest: "/usr/share/xml/scap/ssg/content/"
+    dest: "/tmp/"
     mode: 0644
   with_fileglob:
-    - "roles/openscap/files/ssg-ubuntu*"
-  when: ansible_distribution == "Ubuntu"
+    - "/usr/local/share/xml/scap/ssg/content/ssg-ubuntu*"
 
 - name: Run OpenSCAP scan
   become: true
-  shell: "oscap xccdf eval --datastream-id scap_org.open-scap_datastream_from_xccdf_ssg-debian11-xccdf.xml --xccdf-id scap_org.open-scap_cref_ssg-debian11-xccdf.xml --profile xccdf_org.ssgproject.content_profile_anssi_np_nt28_average --oval-results --results /tmp/xccdf-results.xml --results-arf /tmp/arf.xml --report /tmp/report.html /tmp/ssg-debian11-ds.xml"
+  vars:
+    datastream_id: "scap_org.open-scap_datastream_from_xccdf_ssg-ubuntu2204-xccdf.xml"
+    xccdf_id: "scap_org.open-scap_cref_ssg-ubuntu2204-xccdf.xml"
+    profile: "xccdf_org.ssgproject.content_profile_standard"
+    datastream_path: "ssg-ubuntu2204-ds.xml"
+  shell: "oscap xccdf eval --datastream-id {{ datastream_id }} --xccdf-id {{ xccdf_id }} --profile {{ profile }} --oval-results --results /tmp/xccdf-results.xml --results-arf /tmp/arf.xml --report /tmp/report.html {{ datastream_path }}"
   register: result
   failed_when: ( result.rc not in [ 0, 2 ] )
 
