--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = hosts
+inventory = inventory
 remote_user = vagrant
 private_key_file = ~/.ssh/id_rsa
 host_key_checking = False
