--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,8 @@ run-openscap-scan:
     - chmod 400 ~/.ssh/id_rsa
     - rm -f ~/.ssh/known_hosts
   script:
-    - ansible-playbook playbooks/main.yml
+    - ansible-playbook playbooks/security-scan/main.yml
+    - ansible-playbook playbooks/dependencies/main.yml
   artifacts:
     paths:
       - reports
