--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,23 +5,25 @@ update-dependencies:
   script:
     # - ansible-playbook playbooks/dependencies/main.yml
     # - chmod +x ./scripts/install-ssg.sh && ./scripts/install-ssg.sh
-    - apt-get update
-    - apt-get install -y curl bzip2 cmake python3-dev python3-yaml python3-pip libxml2-utils ninja-build xsltproc # libopenscap8
-    - pip install jinja2 #pyyaml
+    - which python3
+    - python3 --version
+    # - apt-get update
+    # - apt-get install -y curl bzip2 cmake python3-dev python3-yaml python3-pip libxml2-utils ninja-build xsltproc # libopenscap8
+    # - pip install jinja2 pyyaml
 
     # Download SCAP Security Guide source code
-    - ssg_version=$(curl --silent "https://api.github.com/repos/ComplianceAsCode/content/releases/latest" | grep '"tag_name":' | sed -E 's/.*"v([^"]+)".*/\1/')
-    - ssg_url="https://github.com/ComplianceAsCode/content/releases/download/v$ssg_version/scap-security-guide-$ssg_version.tar.bz2"
-    - curl -so /tmp/scap-security-guide-$ssg_version.tar.bz2 -L "$ssg_url"
-    - ls -la /tmp/scap-security-guide-$ssg_version.tar.bz2
-    - tar -xjf /tmp/scap-security-guide-$ssg_version.tar.bz2 -C /tmp
+    # - ssg_version=$(curl --silent "https://api.github.com/repos/ComplianceAsCode/content/releases/latest" | grep '"tag_name":' | sed -E 's/.*"v([^"]+)".*/\1/')
+    # - ssg_url="https://github.com/ComplianceAsCode/content/releases/download/v$ssg_version/scap-security-guide-$ssg_version.tar.bz2"
+    # - curl -so /tmp/scap-security-guide-$ssg_version.tar.bz2 -L "$ssg_url"
+    # - ls -la /tmp/scap-security-guide-$ssg_version.tar.bz2
+    # - tar -xjf /tmp/scap-security-guide-$ssg_version.tar.bz2 -C /tmp
 
     # Build SCAP Security Guide
-    - mkdir -p /tmp/scap-security-guide-$ssg_version/build
-    - ls -la /tmp/scap-security-guide-$ssg_version
-    - cmake -S /tmp/scap-security-guide-$ssg_version -B /tmp/scap-security-guide-$ssg_version/build
-    - make -C /tmp/scap-security-guide-$ssg_version/build -j4 debian11
-    - ls -la /tmp/scap-security-guide-$ssg_version/build
+    # - mkdir -p /tmp/scap-security-guide-$ssg_version/build
+    # - ls -la /tmp/scap-security-guide-$ssg_version
+    # - cmake -S /tmp/scap-security-guide-$ssg_version -B /tmp/scap-security-guide-$ssg_version/build
+    # - make -C /tmp/scap-security-guide-$ssg_version/build -j4 debian11
+    # - ls -la /tmp/scap-security-guide-$ssg_version/build
 # run-security-scan:
 #   tags:
 #     - shell
