--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,8 +5,8 @@ update-dependencies:
   script:
     # - ansible-playbook playbooks/dependencies/main.yml
     # - chmod +x ./scripts/install-ssg.sh && ./scripts/install-ssg.sh
-    - which python3
-    - python3 --version
+    - which python
+    - python --version
     # - apt-get update
     # - apt-get install -y curl bzip2 cmake python3-dev python3-yaml python3-pip libxml2-utils ninja-build xsltproc # libopenscap8
     # - pip install jinja2 pyyaml
