--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,41 +1,32 @@
-update-dependencies:
+stages:
+  - triggers
+  - scan
+
+default:
+  image: debian:11
   tags:
     - docker
-  image: debian:11
+
+trigger_oscap:
+  stage: triggers
+  trigger:
+    include: oscap/.gitlab-ci.yml
+  rules:
+    - when: always
+
+run-security-scan:
+  stage: scan
+  # tags:
+  #   - shell
+  before_script:
+    - mkdir -p ~/.ssh
+    - cp -f "$SSH_PRIVATE_KEY" ~/.ssh/id_rsa
+    - chmod 400 ~/.ssh/id_rsa
+    # - rm -f ~/.ssh/known_hosts
   script:
-    # - ansible-playbook playbooks/dependencies/main.yml
-    # - chmod +x ./scripts/install-ssg.sh && ./scripts/install-ssg.sh
-    - which python
-    - python --version
-    # - apt-get update
-    # - apt-get install -y curl bzip2 cmake python3-dev python3-yaml python3-pip libxml2-utils ninja-build xsltproc # libopenscap8
-    # - pip install jinja2 pyyaml
-
-    # Download SCAP Security Guide source code
-    # - ssg_version=$(curl --silent "https://api.github.com/repos/ComplianceAsCode/content/releases/latest" | grep '"tag_name":' | sed -E 's/.*"v([^"]+)".*/\1/')
-    # - ssg_url="https://github.com/ComplianceAsCode/content/releases/download/v$ssg_version/scap-security-guide-$ssg_version.tar.bz2"
-    # - curl -so /tmp/scap-security-guide-$ssg_version.tar.bz2 -L "$ssg_url"
-    # - ls -la /tmp/scap-security-guide-$ssg_version.tar.bz2
-    # - tar -xjf /tmp/scap-security-guide-$ssg_version.tar.bz2 -C /tmp
-
-    # Build SCAP Security Guide
-    # - mkdir -p /tmp/scap-security-guide-$ssg_version/build
-    # - ls -la /tmp/scap-security-guide-$ssg_version
-    # - cmake -S /tmp/scap-security-guide-$ssg_version -B /tmp/scap-security-guide-$ssg_version/build
-    # - make -C /tmp/scap-security-guide-$ssg_version/build -j4 debian11
-    # - ls -la /tmp/scap-security-guide-$ssg_version/build
-# run-security-scan:
-#   tags:
-#     - shell
-#   before_script:
-#     - mkdir -p ~/.ssh
-#     - cp -f "$SSH_PRIVATE_KEY" ~/.ssh/id_rsa
-#     - chmod 400 ~/.ssh/id_rsa
-#     - rm -f ~/.ssh/known_hosts
-#   script:
-#     - ansible-playbook playbooks/security-scan/main.yml
-#   artifacts:
-#     paths:
-#       - reports
-#   after_script:
-#     - rm ~/.ssh/id_rsa
+    - ansible-playbook playbooks/security-scan/main.yml
+  artifacts:
+    paths:
+      - reports
+  # after_script:
+  #   - rm ~/.ssh/id_rsa
