--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ default:
 trigger_oscap:
   stage: triggers
   trigger:
-    include: oscap/.gitlab-ci.yml
+    include: build_dependencies/oscap.yml
   rules:
     - when: always
 
@@ -23,6 +23,7 @@ run-security-scan:
     - cp -f "$SSH_PRIVATE_KEY" ~/.ssh/id_rsa
     - chmod 400 ~/.ssh/id_rsa
     # - rm -f ~/.ssh/known_hosts
+  needs: ["trigger_oscap"]
   script:
     - ansible-playbook playbooks/security-scan/main.yml
   artifacts:
