--- a/build_dependencies/oscap.yml
+++ b/build_dependencies/oscap.yml
@@ -21,11 +21,7 @@ build_oscap:
     - tar -xzpf /tmp/openscap-${openscap_version}.tar.gz -C /tmp
 
     # Install Openscap dependencies
-    - apt-get install -y cmake libdbus-1-dev libdbus-glib-1-dev libcurl4-openssl-dev \
-    - libgcrypt20-dev libselinux1-dev libxslt1-dev libgconf2-dev libacl1-dev libblkid-dev \
-    - libcap-dev libxml2-dev libldap2-dev libpcre3-dev python3-dev swig libxml-parser-perl \
-    - libxml-xpath-perl libperl-dev libbz2-dev librpm-dev g++ libapt-pkg-dev libyaml-dev \
-    - libxmlsec1-dev libxmlsec1-openssl
+    - apt-get install -y cmake libdbus-1-dev libdbus-glib-1-dev libcurl4-openssl-dev libgcrypt20-dev libselinux1-dev libxslt1-dev libgconf2-dev libacl1-dev libblkid-dev libcap-dev libxml2-dev libldap2-dev libpcre3-dev python3-dev swig libxml-parser-perl libxml-xpath-perl libperl-dev libbz2-dev librpm-dev g++ libapt-pkg-dev libyaml-dev libxmlsec1-dev libxmlsec1-openssl
 
     # Build Openscap
     - mkdir -p /tmp/openscap-${openscap_version}/build
