--- a/build_dependencies/oscap.yml
+++ b/build_dependencies/oscap.yml
@@ -9,13 +9,13 @@ default:
     pull_policy: if-not-present
   tags:
     - docker
-  become: true
 
 build_oscap:
   stage: build
   script:
     - pwd
     - ls -la
+    - chmod +x build_dependencies/test.sh
     - build_dependencies/test.sh
   artifacts:
     paths:
