--- a/build_dependencies/oscap.yml
+++ b/build_dependencies/oscap.yml
@@ -11,25 +11,24 @@ default:
     - docker
 
 variables:
-  openscap_version: "1.3.7"
+  openscap_version: ""
 
 build_oscap:
   stage: build
   script:
-    - pwd
-    - ls -la
-    - 'echo "OpenSCAP version: ${openscap_version}" >> oscap.txt'
-    - openscap_version="1.3.8"
-    - 'echo "OpenSCAP version: ${openscap_version}" >> oscap.txt'
-  artifacts:
-    paths:
-      - oscap.txt
-      # - oscap_${openscap_version}.deb
-test_oscap:
-  stage: test
-  needs: ["build_oscap"]
-  script:
-    - cat oscap.txt
+    - apt update
+    - apt install curl
+    - openscap_version=$(curl --silent "https://api.github.com/repos/OpenSCAP/openscap/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
+    - echo $openscap_version
+#   artifacts:
+#     paths:
+#       - oscap.txt
+#       # - oscap_${openscap_version}.deb
+# test_oscap:
+#   stage: test
+#   needs: ["build_oscap"]
+#   script:
+#     - cat oscap.txt
 #     - apt update
 #     - apt install ./oscap_${openscap_version}.deb
 #     - oscap --version
