--- a/build_dependencies/oscap.yml
+++ b/build_dependencies/oscap.yml
@@ -25,16 +25,18 @@ build_oscap:
       echo "No new version of OpenSCAP is available: $openscap_version";
       exit 0;
       fi'
+    - $rebuild_oscap="true"
     - 'echo "New version of OpenSCAP is available: $openscap_version"'
 #   artifacts:
 #     paths:
 #       - oscap.txt
 #       # - oscap_${openscap_version}.deb
-# test_oscap:
-#   stage: test
-#   needs: ["build_oscap"]
-#   script:
-#     - cat oscap.txt
+test_oscap:
+  stage: test
+  needs: ["build_oscap"]
+  script:
+    - echo $rebuild_oscap
+    # - cat oscap.txt
 #     - apt update
 #     - apt install ./oscap_${openscap_version}.deb
 #     - oscap --version
