--- a/build_dependencies/oscap.yml
+++ b/build_dependencies/oscap.yml
@@ -25,17 +25,21 @@ build_oscap:
       echo "No new version of OpenSCAP is available: $openscap_version";
       exit 0;
       fi'
-    - rebuild_oscap="true"
+    - echo "$openscap_version" > version.txt
     - 'echo "New version of OpenSCAP is available: $openscap_version"'
-#   artifacts:
-#     paths:
-#       - oscap.txt
-#       # - oscap_${openscap_version}.deb
+  artifacts:
+    paths:
+      - version.txt
+      # - oscap_${openscap_version}.deb
 test_oscap:
   stage: test
   needs: ["build_oscap"]
   script:
-    - echo $rebuild_oscap
+    - if [ ! -f version.txt ]; then
+      exit 0;
+      fi
+    - openscap_version=$(cat version.txt)
+    - 'echo "New version of OpenSCAP is available: $openscap_version"'
     # - cat oscap.txt
 #     - apt update
 #     - apt install ./oscap_${openscap_version}.deb
