--- a/build_dependencies/oscap.yml
+++ b/build_dependencies/oscap.yml
@@ -10,32 +10,28 @@ default:
   tags:
     - docker
 
-variables:
-  openscap_version: ""
-  rebuild_oscap: "false"
-
 build_oscap:
   stage: build
   script:
     - apt update
     - apt install -y curl
     - openscap_version=$(curl --silent "https://api.github.com/repos/OpenSCAP/openscap/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
-    - current_oscap_version="1.3.7"
+    - current_oscap_version="1.3.8"
     - 'if [ "$openscap_version" == "$current_oscap_version" ]; then
       echo "No new version of OpenSCAP is available: $openscap_version";
       exit 0;
       fi'
-    - echo "$openscap_version" > version.txt
+    - echo "$openscap_version" > new_version.txt
     - 'echo "New version of OpenSCAP is available: $openscap_version"'
   artifacts:
     paths:
-      - version.txt
+      - new_version.txt
       # - oscap_${openscap_version}.deb
 test_oscap:
   stage: test
   needs: ["build_oscap"]
   script:
-    - if [ ! -f version.txt ]; then
+    - if [ ! -f new_version.txt ]; then
       exit 0;
       fi
     - openscap_version=$(cat version.txt)
