--- a/build_dependencies/oscap.yml
+++ b/build_dependencies/oscap.yml
@@ -65,32 +65,32 @@ build_oscap:
     - dpkg-deb --build /tmp/oscap_${openscap_version}
     # - openscap_version="1.3.8"
     # - touch /tmp/oscap_${openscap_version}.deb
+    - mkdir artifacts
 
-    - echo "$openscap_version" > version.txt
-    - mv /tmp/oscap_${openscap_version}.deb .
-    - ls -la
+    - echo "$openscap_version" > artifacts/version.txt
+    - mv /tmp/oscap_${openscap_version}.deb artifacts
+    - ls -la artifacts
   artifacts:
     paths:
-      - "version.txt"
-      - "oscap*.deb"
+      - artifacts
 test_oscap:
   stage: test
   needs: ["build_oscap"]
   script:
-    - if [ ! -f version.txt ]; then
+    - if [ ! -f artifacts/version.txt ]; then
       echo "No new version of OpenSCAP is available";
       exit 0;
       fi
-    - openscap_version=$(cat version.txt)
+    - openscap_version=$(cat artifacts/version.txt)
     - 'echo "New version of OpenSCAP is available: $openscap_version"'
     - apt update
-    - apt install -fy ./oscap_${openscap_version}.deb
+    - apt install -fy artifacts/oscap_${openscap_version}.deb
     - oscap --version
 deploy_oscap:
   stage: deploy
   needs: ["test_oscap"]
   script:
-    - if [ ! -f version.txt ]; then
+    - if [ ! -f artifacts/version.txt ]; then
       echo "No new version of OpenSCAP is available";
       exit 0;
       fi
@@ -101,6 +101,9 @@ deploy_oscap:
     - export GIT_SSL_NO_VERIFY=1
 
     - apt install git
+    - cd artifacts
+    - pwd
+    - ls -la
     - git init
     - git remote add origin https://oauth2:$ACCESS_TOKEN@gitlab.example.com/root/oscap.git
     - git config user.email "ci-bot@gitlab.example.com"
