--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,11 +27,11 @@ check_oscap:
     - apt update
     - apt install -y curl git
     - openscap_version=$(curl --silent "https://api.github.com/repos/OpenSCAP/openscap/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
-    - current_oscap_version=$(git -c 'versionsort.suffix=-' ls-remote --exit-code --refs --sort='version:refname' --tags https://oauth2:$ACCESS_TOKEN@gitlab.example.com/root/oscap.git '*.*.*' | tail --lines=1 | cut --delimiter='/' --fields=3 | sed -E "s/v//")
-    - 'if [ "$openscap_version" == "$current_oscap_version" ]; then
-      echo "No new version of OpenSCAP is available: $openscap_version";
-      exit 0;
-      fi'
+    # - current_oscap_version=$(git -c 'versionsort.suffix=-' ls-remote --exit-code --refs --sort='version:refname' --tags https://oauth2:$ACCESS_TOKEN@gitlab.example.com/root/oscap.git '*.*.*' | tail --lines=1 | cut --delimiter='/' --fields=3 | sed -E "s/v//")
+    # - 'if [ "$openscap_version" == "$current_oscap_version" ]; then
+    #   echo "No new version of OpenSCAP is available: $openscap_version";
+    #   exit 0;
+    #   fi'
     - echo "openscap_version=$openscap_version" >> oscap.env
     - echo "update_oscap=true" >> oscap.env
     - cat oscap.env
