--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ default:
 
 include:
   - local: build_dependencies/oscap.yml
+  - local: build_dependencies/ssg.yml
 
 run-security-scan:
   stage: scan
