--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,13 +17,14 @@ default:
   tags:
     - docker
 
-include:
-  - local: build_dependencies/oscap.yml
-  - local: build_dependencies/ssg.yml
+# include:
+#   - local: build_dependencies/oscap.yml
+#   - local: build_dependencies/ssg.yml
 
 run-security-scan:
   stage: scan
   script:
+    - exit 2 || echo $?
     - echo "Run security scan"
 # run-security-scan:
 #   stage: scan
